--- a/public/themes/simpleboot3/portal/solution.html
+++ b/public/themes/simpleboot3/portal/solution.html
@@ -26,7 +26,7 @@
             $firstid = $subCategoryIds[0];
             $subForFirst = \app\portal\service\ApiService::subCategories($firstid);
             if($subForFirst && count($subForFirst)>0){
-                $firstChildId = $subForFirst[0]['id'];
+            $firstChildId = $subForFirst[0]['id'];
             }
 
             $where =function ($query){
@@ -51,9 +51,9 @@
                                     <div class="content_left_changjing">
                                         <div>适用场景</div>
                                         <notempty name="$firstChildId">
-                                        <portal:articles item="v" order="post.create_time DESC" page="3"  categoryIds="$firstChildId" returnVarName="articles_data">
-                                        <div>{$v.post_title}</div>
-                                        </portal:articles>
+                                            <portal:articles item="v" order="post.create_time DESC" page="3" categoryIds="$firstChildId" returnVarName="articles_data">
+                                                <div>{$v.post_title}</div>
+                                            </portal:articles>
                                         </notempty>
                                     </div>
                                 </div>
@@ -234,6 +234,15 @@
             $(".solution-advantage-box .solution_advantage .inner .list2").css({ 'display': 'flex' })
             $(".solution-advantage-box .solution_advantage .inner .list2").append("<div class='list2_title'>" + $(this).prev().text() + "</div>")
             $(this).prev().remove()
+
+            $(function () {
+                if (screen.width < 425) {
+                    $(".solution-advantage-box .solution_advantage .inner .list").css({ 'justify-content': 'space-between' })
+                } else if (screen.width > 425) {
+                    $(".solution-advantage-box .solution_advantage .inner .list .item").css({ 'width': '8rem', 'margin-right': '0.3rem' })
+                    $(".solution-advantage-box .solution_advantage .inner .list").css({ 'justify-content': 'flex-start' })
+                }
+            })
         }
     });
 </script>
