--- a/public/themes/simpleboot3/portal/about.html
+++ b/public/themes/simpleboot3/portal/about.html
@@ -155,6 +155,14 @@
 											</li>
 											<li class="name">
 												<div class="circular"></div>
+												<div><span>12-30</span>华劳集团荣获“山东省儒商研究会优秀会员单位”荣誉称号！</div>
+											</li>
+											<li class="name">
+												<div class="circular"></div>
+												<div><span>12-28</span>华劳集团总经理李永欣同志荣获“德州市人力资源服务领军人才”荣誉称号！</div>
+											</li>
+											<li class="name">
+												<div class="circular"></div>
 												<div><span>12-20</span>热烈庆祝华劳人力资源有限公司全国分公司总数达40家！</div>
 											</li>
 											<li class="name">
@@ -176,6 +184,10 @@
 											<li class="name">
 												<div class="circular"></div>
 												<div><span>11-11</span>德州中好物业服务有限公司成立</div>
+											</li>
+											<li class="name">
+												<div class="circular"></div>
+												<div><span>10-24</span>安徽百企人力资源服务有限公司大观分公司成立</div>
 											</li>
 											<li class="name">
 												<div class="circular"></div>
@@ -326,11 +338,31 @@
 											</li>
 											<li class="name">
 												<div class="circular"></div>
+												<div><span>06-28</span>安徽华劳人力资源服务有限公司嘉兴分公司成立</div>
+											</li>
+											<li class="name">
+												<div class="circular"></div>
+												<div><span>06-21</span>安徽百企人力资源服务有限公司安庆分公司成立</div>
+											</li>
+											<li class="name">
+												<div class="circular"></div>
+												<div><span>06-07</span>山东百业服务外包有限公司德州分公司成立</div>
+											</li>
+											<li class="name">
+												<div class="circular"></div>
 												<div><span>05-08</span>雇员工伤保护伞“雇工伞”产品上线</div>
 											</li>
 											<li class="name">
 												<div class="circular"></div>
 												<div><span>04-30</span>华劳集团总经理李永欣刊登为“儒商杂志封面人物”！</div>
+											</li>
+											<li class="name">
+												<div class="circular"></div>
+												<div><span>02-17</span>安徽华劳人力资源服务有限公司成立</div>
+											</li>
+											<li class="name">
+												<div class="circular"></div>
+												<div><span>01-14</span>安徽百企人力资源服务有限公司成立</div>
 											</li>
 										</ul>
 									</div>
