--- a/public/themes/simpleboot3/portal/index.html
+++ b/public/themes/simpleboot3/portal/index.html
@@ -246,8 +246,16 @@
                                     </li>
                                     <li>
                                         <div class="circular"></div>
-                                        <div class="name">12-20 热烈庆祝华劳人力资源有限公司全国分公司总数达40家！</div>
+                                        <div class="name">12-30 华劳集团荣获“山东省儒商研究会优秀会员单位”荣誉称号！</div>
                                     </li>
+									<li>
+									    <div class="circular"></div>
+									    <div class="name">12-28 华劳集团总经理李永欣同志荣获“德州市人力资源服务领军人才”荣誉称号！</div>
+									</li>
+									<li>
+									    <div class="circular"></div>
+									    <div class="name">12-20 热烈庆祝华劳人力资源有限公司全国分公司总数达40家！</div>
+									</li>
                                     <li>
                                         <div class="circular"></div>
                                         <div class="name">12-16 华劳集团总经理李永欣同志荣获“德州市人力资源服务领军人才”称号！</div>
@@ -270,8 +278,12 @@
                                     </li>
                                     <li>
                                         <div class="circular"></div>
-                                        <div class="name">10-15 刷活灵活用工平台正式上线！</div>
+                                        <div class="name">10-24 安徽百企人力资源服务有限公司大观分公司成立</div>
                                     </li>
+									<li>
+									    <div class="circular"></div>
+									    <div class="name">10-15 刷活灵活用工平台正式上线！</div>
+									</li>
                                     <li>
                                         <div class="circular"></div>
                                         <div class="name">10-14 华劳集团三体系认证审核通过</div>
@@ -415,6 +427,18 @@
                                         <div class="circular"></div>
                                         <div class="name">07-14 华劳人力资源有限公司贵州分公司 成立</div>
                                     </li>
+									<li>
+									    <div class="circular"></div>
+									    <div class="name">06-28 安徽华劳人力资源服务有限公司嘉兴分公司成立</div>
+									</li>
+									<li>
+									    <div class="circular"></div>
+									    <div class="name">06-21 安徽百企人力资源服务有限公司安庆分公司成立</div>
+									</li>
+									<li>
+									    <div class="circular"></div>
+									    <div class="name">06-07 山东百业服务外包有限公司德州分公司成立</div>
+									</li>
                                     <li>
                                         <div class="circular"></div>
                                         <div class="name">05-08 雇员工伤保护伞“雇工伞”产品上线</div>
@@ -423,6 +447,14 @@
                                         <div class="circular"></div>
                                         <div class="name">04-30 华劳集团总经理李永欣刊登为“儒商杂志封面人物”！</div>
                                     </li>
+									<li>
+									    <div class="circular"></div>
+									    <div class="name">02-17 安徽华劳人力资源服务有限公司成立</div>
+									</li>
+									<li>
+									    <div class="circular"></div>
+									    <div class="name">01-14 安徽百企人力资源服务有限公司成立</div>
+									</li>
                                     <li class="active">
                                         <div class="circular"></div>
                                         <div class="name">2021</div>
