--- a/public/themes/simpleboot3/public/footer.html
+++ b/public/themes/simpleboot3/public/footer.html
@@ -4,7 +4,13 @@
             <div class="foot-top-left">
                 <div class="item">
                     <div class="title">产品服务</div>
-                    <div class="text">
+					<div class="text" style="display: flex;flex-wrap: wrap;">
+						<portal:subCategories categoryId="31" item="item">
+						    <a href="{:cmf_url('portal/List/index',array('id'=>$item.id))}"
+						            title="{$item.name}" style="display: inline-block;width: 50%;margin-right: 0;">{$item.name}</a>
+						</portal:subCategories>
+					</div>
+                    <!-- <div class="text">
                         <a href="javascript:void(0);">劳务派遣</a>
                         <a href="javascript:void(0);">岗位外包</a>
                     </div>
@@ -19,36 +25,33 @@
                     <div class="text">
                         <a href="javascript:void(0);">灵活用工</a>
                         <a href="javascript:void(0);">工伤外包</a>
-                    </div>
+                    </div> -->
                 </div>
                 <div class="item">
                     <div class="title">解决方案</div>
                     <div class="text">
-                        <a href="javascript:void(0);">企业规模用工解决方案</a>
+                        <portal:subCategories categoryId="68" item="item">
+                            <a href="{:cmf_url('portal/List/index',array('id'=>$item.id))}"
+                                    title="{$item.name}" style="display: inline-block;width: 50%;margin-right: 0;">{$item.name}</a>
+                        </portal:subCategories>
                     </div>
-                    <div class="text">
+                   <!-- <div class="text">
                         <a href="javascript:void(0);">企业用工风险解决方案</a>
                     </div>
                     <div class="text">
                         <a href="javascript:void(0);">全国人事社保解决方案</a>
-                    </div>
+                    </div> -->
                 </div>
-                <div class="item">
+                <div class="item" style="width:5.71rem;">
                     <div class="title">走进华劳</div>
-                    <div class="text">
-                        <a href="{:cmf_url('portal/About/index')}">关于华劳</a>
-                        <a href="{:cmf_url('portal/About/index')}">发展历程</a>
-                    </div>
-                    <div class="text">
-                        <a href="{:cmf_url('portal/News/index')}">新闻资讯</a>
-                        <a href="{:cmf_url('portal/Customer/index')}">合作客户</a>
-                    </div>
-                    <div class="text">
-                        <a href="{:cmf_url('portal/Contacts/index')}">联系我们</a>
-                        <a href="{:cmf_url('portal/About/index')}">资质证书</a>
-                    </div>
-                    <div class="text">
-                        <a href="{:cmf_url('portal/About/index')}">员工查询</a>
+                    <div class="text" style="display: flex;flex-wrap: wrap;">
+                        <a style="display: inline-block;width: 50%;margin-right: 0;" href="{:cmf_url('portal/About/index')}">关于华劳</a>
+                        <a style="display: inline-block;width: 50%;margin-right: 0;" href="{:cmf_url('portal/About/index')}">发展历程</a>
+						<a style="display: inline-block;width: 50%;margin-right: 0;" href="{:cmf_url('portal/News/index')}">新闻资讯</a>
+						<a style="display: inline-block;width: 50%;margin-right: 0;" href="{:cmf_url('portal/Customer/index')}">合作客户</a>
+						<a style="display: inline-block;width: 50%;margin-right: 0;" href="{:cmf_url('portal/Contacts/index')}">联系我们</a>
+						<a style="display: inline-block;width: 50%;margin-right: 0;" href="{:cmf_url('portal/About/index')}">资质证书</a>
+						<a style="display: inline-block;width: 50%;margin-right: 0;" href="{:cmf_url('portal/About/index')}">员工查询</a>
                     </div>
                 </div>
                 <div class="item">
