--- a/public/themes/simpleboot3/portal/contact.html
+++ b/public/themes/simpleboot3/portal/contact.html
@@ -8,13 +8,13 @@
     <meta name="keywords" content="联系我们">
     <meta name="description" content="">
     <meta name="description" content="">
-    <link href="static/css/bootstrap.css" rel="stylesheet">
-    <link href="static/css/app.css" rel="stylesheet">
-    <link href="static/css/animate.css" rel="stylesheet" type="text/css" media="all">
-    <link href="static/css/main.css" rel="stylesheet">
-    <link rel="stylesheet" href="static/css/validate.css">
-    <link type="text/css" rel="stylesheet" href="static/css/pagination.css">
-    <link type="text/css" rel="stylesheet" href="static/css/ui-dialog.css">
+    <link href="__TMPL__/public/assets/static/css/bootstrap.css" rel="stylesheet">
+    <link href="__TMPL__/public/assets/static/css/app.css" rel="stylesheet">
+    <link href="__TMPL__/public/assets/static/css/animate.css" rel="stylesheet" type="text/css" media="all">
+    <link href="__TMPL__/public/assets/static/css/main.css" rel="stylesheet">
+    <link rel="stylesheet" href="__TMPL__/public/assets/static/css/validate.css">
+    <link type="text/css" rel="stylesheet" href="__TMPL__/public/assets/static/css/pagination.css">
+    <link type="text/css" rel="stylesheet" href="__TMPL__/public/assets/static/css/ui-dialog.css">
     <!--[if lt IE 9]>
   <script src="https://cdn.bootcss.com/html5shiv/3.7.3/html5shiv.min.js"></script>
   <script src="https://cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
@@ -24,69 +24,8 @@
     <div id="position" class="none">
         <p>当前位置：<a href="index.html">网站首页</a> > <a>关于我们</a> > <a>联系我们</a></p>
     </div>
-    <script type="text/javascript" src="static/js/jquery-1.11.2.min.js"></script>   
-<div class="topbar">
-    <div class="container">
-        <p class="pull_left fiften">十五年核心团队 · 值得信赖</p>
-        <div class="pull_right tpr">
-            <p class="dh"><i>APP定制开发咨询热线：</i><em>1895226560</em><i> / </i><em></em></p>
-        </div>
-    </div>
-</div>
-<nav class="navbar navbar-default header_inner">
-    <div class="container" id="nav">
-        <h3 class="logo"><a href="index.html">app开发公司,上海app开发,app定制开发</a></h3>
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-            <ul class="nav navbar-nav" id="menus">
-                <li><a href="index.html"><span>网站首页</span></a></li>
-                <li><a href="app.html"><span>APP开发</span></a></li>
-                <li><a href="xcx.html"><span>微信小程序开发</span></a></li>
-                <li><a href="wlw.html"><span>物联网与大数据开发</span></a></li>
-                <li><a href="dxwhtd.html" rel="nofollow" target="_blank"><span>大象探店优选</span></a></li>
-                <li class="dropdown">
-                    <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span>产品与解决方案</span><em class="caret"></em></a>
-                    <ul class="dropdown-menu">
-                        <a href="waste_disposal.html" rel="nofollow" target="_blank">垃圾处理项目</a>
-                        <a href="znjsxt.html" rel="nofollow" target="_blank">智能健身系统</a>
-                    
-						<a href="znwyxt.html" rel="nofollow" target="_blank">智能物业系统</a>
-                        <a href="swdcxt.html" rel="nofollow" target="_blank">政务督办系统</a>
-                        <a href="dyxcx.html" rel="nofollow" target="_blank">抖音小程序</a>
-                    <a href="javascript:;" rel="nofollow" target="_blank">火课在线教育系统</a>
-                        
-                    </ul>
-                </li>
-                <li><a href="86.html"><span>成功案例</span></a></li>
-                <li class="dropdown">
-                    <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span>开发资讯</span> <em class="caret"></em></a>
-                    <ul class="dropdown-menu">
-                        <a href="71.html">APP业界资讯</a>
-                        <a href="69.html">iOS APP开发资讯</a>
-                        <a href="70.html">Android APP开发资讯</a>
-                        <a href="100.html">小程序开发常见问题</a>
-                        <a href="99.html">微信小程序开发业界资讯</a>
-                        <a href="72.html">APP开发常见问题</a>
-                    </ul>
-                </li>
-                <li class="dropdown">
-                    <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span>关于我们</span> <em class="caret"></em></a>
-                    <ul class="dropdown-menu">
-                        <a href="gsjj.html" rel="nofollow">关于真略</a>
-                        <a href="" rel="nofollow">联系我们</a>
-                    </ul>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
+    <script type="text/javascript" src="__TMPL__/public/assets/static/js/jquery-1.11.2.min.js"></script>
+    <include file="public@head" />
 <script type="text/javascript">
 $(document).ready(function(){
 	var navOffset=$("#nav").offset().top;
@@ -101,13 +40,13 @@ $(document).ready(function(){
 
 });
 </script>
-<script type="text/javascript" src="static/js/dh.js"></script>
+<script type="text/javascript" src="__TMPL__/public/assets/static/js/dh.js"></script>
 
-    <script src="static/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="static/js/jquery.form.min.js"></script>
-    <script type="text/javascript" src="static/js/Validform_v5.3.2_min.js"></script>
-    <script type="text/javascript" src="static/js/dialog-plus-min.js"></script>
-    <script type="text/javascript" src="static/js/common.js"></script>
+    <script src="__TMPL__/public/assets/static/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="__TMPL__/public/assets/static/js/jquery.form.min.js"></script>
+    <script type="text/javascript" src="__TMPL__/public/assets/static/js/Validform_v5.3.2_min.js"></script>
+    <script type="text/javascript" src="__TMPL__/public/assets/static/js/dialog-plus-min.js"></script>
+    <script type="text/javascript" src="__TMPL__/public/assets/static/js/common.js"></script>
     <script type="text/javascript">
         $(function () {
             //初始化发表评论表单
@@ -129,7 +68,7 @@ $(document).ready(function(){
                     网址：www.cnzlapp.com
                 </p>
                 <div class="pd ewm">
-                    <img src="static/picture/code1.png"><span>真略公众号</span>
+                    <img src="__TMPL__/public/assets/static/picture/code1.png"><span>真略公众号</span>
                 </div>
                 <p class="pd zxtel">产品咨询热线：<strong><a href="tel:400-663-9990">400-663-9990</a></strong></p>
             </div>
@@ -141,7 +80,7 @@ $(document).ready(function(){
                 <input type="text" id="txtUserTel" name="txtUserTel" maxlength="11" placeholder="请输入您的联系方式" class="text">
                 <textarea class="text" id="txtContent" name="txtContent" maxlength="50" placeholder="详细描述您的需求..."></textarea>
                 <div class="yzm"><input id="txtCode" name="txtCode" type="text" maxlength="4" class="text" placeholder="验证码"><a href="javascript:;" onclick="ToggleCode(this, '/tools/verify_code.ashx');return false;" class="code">
-                        <img src="static/picture/verify_code.ashx" width="80" height="35" align="absmiddle"></a><span class="Validform_checktip"></span></div>
+                        <img src="__TMPL__/public/assets/static/picture/verify_code.ashx" width="80" height="35" align="absmiddle"></a><span class="Validform_checktip"></span></div>
                 <input type="submit" value="立即提交" id="btnSubmit" name="btnSubmit" class="submit">
             </div>
         </form>
@@ -153,7 +92,7 @@ $(document).ready(function(){
             <li class="col-md-3">
                 <div class="main">
                     <div class="pic">
-                        <img src="static/picture/code1.png">
+                        <img src="__TMPL__/public/assets/static/picture/code1.png">
                     </div>
                     <div class="line"></div>
                     <div class="title">关注微信随时了解动态</div>
@@ -162,7 +101,7 @@ $(document).ready(function(){
             <li class="col-md-3">
                 <div class="main"><a href="tel:400-663-9990">
                     <div class="pic">
-                        <img src="static/picture/tel.jpg">
+                        <img src="__TMPL__/public/assets/static/picture/tel.jpg">
                     </div>
                     <div class="line"></div>
                     <div class="title">产品研发咨询，免费电话</div></a>
@@ -171,7 +110,7 @@ $(document).ready(function(){
             <li class="col-md-3">
                 <div class="main"><a href="javascript:;" target="_blank">
                     <div class="pic">
-                        <img src="static/picture/qq.jpg">
+                        <img src="__TMPL__/public/assets/static/picture/qq.jpg">
                     </div>
                     <div class="line"></div>
                     <div class="title"></div></a>
@@ -180,7 +119,7 @@ $(document).ready(function(){
             <li class="col-md-3">
                 <div class="main"><a href="86.html" target="_blank">
                     <div class="pic">
-                        <img src="static/picture/see.png">
+                        <img src="__TMPL__/public/assets/static/picture/see.png">
                     </div>
                     <div class="line"></div>
                     <div class="title">真略产品案例浏览</div></a>
@@ -192,21 +131,21 @@ $(document).ready(function(){
     <div class="container">
         <ul class="zl_advant wow pulse">
             <li class="col-md-4">
-                <img src="static/picture/zl_td1.png">
+                <img src="__TMPL__/public/assets/static/picture/zl_td1.png">
                 <div class="txt">
                     <h3>守信</h3>
                     <p>透明服务流程与可监督进程管理，保证项目及时交付</p>
                 </div>
             </li>
             <li class="col-md-4">
-                <img src="static/picture/zl_td2.png">
+                <img src="__TMPL__/public/assets/static/picture/zl_td2.png">
                 <div class="txt">
                     <h3>团结</h3>
                     <p>我们的核心团队拥有7—8年专业服务经验，共事多年</p>
                 </div>
             </li>
             <li class="col-md-4">
-                <img src="static/picture/zl_td3.png">
+                <img src="__TMPL__/public/assets/static/picture/zl_td3.png">
                 <div class="txt">
                     <h3>高效</h3>
                     <p>项目负责人一对一专门对接，保证项目高效、完美落地</p>
@@ -218,83 +157,30 @@ $(document).ready(function(){
         <ul>
             <li class="ht">
                 <div class="ht1">
-                    <img src="static/picture/silder1.png" alt="上海APP开发400电话"><div class="ht2">400-663-9990</div>
+                    <img src="__TMPL__/public/assets/static/picture/silder1.png" alt="上海APP开发400电话"><div class="ht2">400-663-9990</div>
                 </div>
             </li>
             <li><a href="javascript:;" target="_blank">
-                <img src="static/picture/silder2.png" alt="QQ在线咨询"></a></li>
+                <img src="__TMPL__/public/assets/static/picture/silder2.png" alt="QQ在线咨询"></a></li>
             <li><a href="javascript:;" target="_blank" rel="nofollow">
-                <img src="static/picture/silder3.png" alt="咨询项目经理"></a></li>
+                <img src="__TMPL__/public/assets/static/picture/silder3.png" alt="咨询项目经理"></a></li>
             <li class="wx">
-                <img src="static/picture/silder4.png">
+                <img src="__TMPL__/public/assets/static/picture/silder4.png">
                 <div class="code">
-                    <img src="static/picture/code1.png" alt="上海APP开发微信公众号"></div>
+                    <img src="__TMPL__/public/assets/static/picture/code1.png" alt="上海APP开发微信公众号"></div>
             </li>
         </ul>
     </div>
-    <footer>
-        <div class="footer_top">
-            <div class="container">
-                <div class="branch_office">
-                    <ul class="fl col-md-8">
-                        <li>
-                            <img src="static/picture/foot1.png" alt="上海总公司">
-                            <div class="info">
-                                <h3>上海总公司</h3>
-                                <p>办公地址：上海静安区平型关路金赢108创意广场银座18楼</p>
-                                <p>
-                                    咨询电话：400-663-9990<br>
-                                    QQ咨询：603233758
-                                </p>
-                            </div>
-                        </li>
-                        <li>
-                            <img src="static/picture/foot3.png" alt="徐州分公司">
-                            <h3>徐州分公司</h3>
-                            <p>办公地址：江苏省徐州市淮海西路120号颖都大厦11F</p>
-                            <p>
-                                咨询电话：0516-85645808<br>
-                                QQ咨询：603233758
-                            </p>
-                        </li>
-                        <li>
-                            <img src="static/picture/foot2.png" alt="南通分公司">
-                            <h3>南通分公司</h3>
-                            <p>办公地址：江苏省南通市崇川区崇川路58号</p>
-                            <p>
-                                QQ咨询：603233758
-                            </p>
-                        </li>
-                    </ul>
-                    <div class="tel" class="col-md-4">
-                        <p>客服电话</p>
-                        <h3>
-                            400-663-9990</h3>
-                        <ul>
-                            <li>
-                                <img src="static/picture/foot_ico1.png" class="t1"><img src="static/picture/code1.png" class="t2" alt="上海真略微信公众号二维码"></li>
-                            <li><a href="javascript:;" target="_blank">
-                                <img src="static/picture/foot_ico2.png" alt="点击QQ咨询APP制作事宜"></a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="footer_bottom">
-            <div class="container copright">Copyright &copy; 2019 All Rights Reserved  版权所有 ：上海真略网络科技有限公司   <a href="javascript:;" target="_blank" rel="nofollow">沪ICP备15021857号-4</a></div>
-            <div class="container copright">上海真略作为<a href="index.html">APP开发</a>领先品牌，多年来已为上百家上海企业提供高品质的移动应用解决方案及服务。欢迎来电咨询！<script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? "https://" : "http://"); document.write(unescape("%3Cspan id='cnzz_stat_icon_1256883526'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s11.cnzz.com/z_stat.php%3Fid%3D1256883526%26show%3Dpic1' type='text/javascript'%3E%3C/script%3E"));</script></div>
-        </div>
-        <div class="clear"></div>
-    </footer>
+    <include file="public@footer"/>
     <script type="text/javascript"> var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://"); document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F8be54612433c604c0b4a06a117cdd627' type='text/javascript'%3E%3C/script%3E")) </script>
-    <script src="static/js/Bmap.js"></script>
-    <script src="static/js/wow.min.js"></script>
+    <script src="__TMPL__/public/assets/static/js/Bmap.js"></script>
+    <script src="__TMPL__/public/assets/static/js/wow.min.js"></script>
     <script>
         if (!(/msie [6|7|8|9]/i.test(navigator.userAgent))) {
             new WOW().init();
         };
     </script>
     <script type="text/javascript"> var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://"); document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F8be54612433c604c0b4a06a117cdd627' type='text/javascript'%3E%3C/script%3E")) </script>
-    <script src="static/js/dh.js"></script>
+    <script src="__TMPL__/public/assets/static/js/dh.js"></script>
 </body>
 </html>
