--- a/public/themes/simpleboot3/public/footer.html
+++ b/public/themes/simpleboot3/public/footer.html
@@ -1,149 +1,60 @@
-<div class="footer">
-    <div class="inner hidden-xs">
-        <div class="foot-top">
-            <div class="foot-top-left">
-                <div class="item">
-                    <div class="title">产品服务</div>
-					<div class="text" style="display: flex;flex-wrap: wrap;">
-						<portal:subCategories categoryId="31" item="item">
-						    <a href="{:cmf_url('portal/List/index',array('id'=>$item.id))}"
-						            title="{$item.name}" style="display: inline-block;width: 50%;margin-right: 0;">{$item.name}</a>
-						</portal:subCategories>
-					</div>
-                    <!-- <div class="text">
-                        <a href="javascript:void(0);">劳务派遣</a>
-                        <a href="javascript:void(0);">岗位外包</a>
-                    </div>
-                    <div class="text">
-                        <a href="javascript:void(0);">业务外包</a>
-                        <a href="javascript:void(0);">劳务分包</a>
-                    </div>
-                    <div class="text">
-                        <a href="javascript:void(0);">保洁外包</a>
-                        <a href="javascript:void(0);">安保服务</a>
-                    </div>
-                    <div class="text">
-                        <a href="javascript:void(0);">灵活用工</a>
-                        <a href="javascript:void(0);">工伤外包</a>
-                    </div> -->
-                </div>
-                <div class="item">
-                    <div class="title">解决方案</div>
-                    <div class="text">
-                        <portal:subCategories categoryId="68" item="item">
-                            <a href="{:cmf_url('portal/List/index',array('id'=>$item.id))}"
-                                    title="{$item.name}" style="display: inline-block;width: 50%;margin-right: 0;">{$item.name}</a>
-                        </portal:subCategories>
-                    </div>
-                   <!-- <div class="text">
-                        <a href="javascript:void(0);">企业用工风险解决方案</a>
-                    </div>
-                    <div class="text">
-                        <a href="javascript:void(0);">全国人事社保解决方案</a>
-                    </div> -->
-                </div>
-                <div class="item" style="width:5.71rem;">
-                    <div class="title">走进华劳</div>
-                    <div class="text" style="display: flex;flex-wrap: wrap;">
-                        <a style="display: inline-block;width: 50%;margin-right: 0;" href="{:cmf_url('portal/About/index')}">关于华劳</a>
-                        <a style="display: inline-block;width: 50%;margin-right: 0;" href="{:cmf_url('portal/About/index')}">发展历程</a>
-						<a style="display: inline-block;width: 50%;margin-right: 0;" href="{:cmf_url('portal/News/index')}">新闻资讯</a>
-						<a style="display: inline-block;width: 50%;margin-right: 0;" href="{:cmf_url('portal/Customer/index')}">合作客户</a>
-						<a style="display: inline-block;width: 50%;margin-right: 0;" href="{:cmf_url('portal/Contacts/index')}">联系我们</a>
-						<a style="display: inline-block;width: 50%;margin-right: 0;" href="{:cmf_url('portal/About/index')}">资质证书</a>
-						<a style="display: inline-block;width: 50%;margin-right: 0;" href="{:cmf_url('portal/About/index')}">员工查询</a>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="title">企业应用</div>
-                    <div class="text">
-                        <a href="{:cmf_url('portal/Application/index')}">雇工伞服务系统</a>
-                    </div>
-					<div class="text">
-					    <a href="{:cmf_url('portal/Application/index')}">企业CRM</a>
-					</div>
-                    <div class="text">
-                        <a href="{:cmf_url('portal/Application/index')}">劳务派遣</a>
-                    </div>
-                    <!-- <div class="text">
-                        <a href="{:cmf_url('portal/Application/index')}">刷活APP</a>
-                    </div>
-                    <div class="text">
-                        <a href="{:cmf_url('portal/Application/index')}">刷活小程序</a>
-                    </div> -->
-                </div>
-            </div>
-            <div class="foot-top-right">
-                <img src="__TMPL__/public/assets/style/imgs/index/hualao-erweima.png" />
-            </div>
-        </div>
-        <div class="foot-center">
-            <ul>
-                <li><a href="javascript:void(0);">中政外包</a></li>
-                <li><a href="https://www.chinacleaning.com" target="_blank">中洁清洁</a></li>
-                <li><a href="https://www.hualaohr.com" target="_blank">华劳人力</a></li>
-                <li><a href="https://www.laowufenbao.com" target="_blank">中劳劳务</a></li>
-                <li><a href="javascript:void(0);">中朗安服</a></li>
-                <li><a href="https://www.jinsanbaoxian.com" target="_blank">金伞保险</a></li>
-                <li><a href="https://www.eqibao.cn" target="_blank">雇工伞</a></li>
-                <li><a href="https://hexie12333.hualaogroup.com" target="_blank">和谐关系</a></li>
-                <li><a href="https://74cms.hualaogroup.com" target="_blank">德劳网</a></li>
-            </ul>
-        </div>
-        <div class="foot-bottom">
-            <div class="foot-bottom-left">
-                <img src="__TMPL__/public/assets/style/imgs/index/logo.svg" class="logo-img" />
-                <div class="text">
-                    <div>华劳集团股份有限公司 ©2022 HUALAO 版权所有</div>
-                    <p>
-                        <a href="http://www.miit.gov.cn/" target="_blank" style="padding-right: 10px;">鲁ICP备17039940号-1</a>
-                        <a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=37149202000991" style="display:inline-block;text-decoration:none;height:20px;line-height:20px;"><img src="http://www.beian.gov.cn/file/ghs.png" style="float:left;">鲁公网安备 37149202000991号</a>
-                    </p>
-                </div>
-            </div>
-            <div class="foot-bottom-right">
-                <div>400-8718711 <img src="__TMPL__/public/assets/style/imgs/index/footer-phone.svg" /></div>
-                <div>0534-2228711 <img src="__TMPL__/public/assets/style/imgs/index/footer-phone.svg" /></div>
-                <div>kf@hualaogroup.com <img src="__TMPL__/public/assets/style/imgs/index/footer-email.svg" /></div>
-                <div>山东省德州市天衢新区康博大厦1701 <img src="__TMPL__/public/assets/style/imgs/index/footer-position.svg" /></div>
-            </div>
-        </div>
-    </div>
-    <div class="inner hidden-lg hidden-md hidden-sm">
-        <div class="foot-phone-top">
-            <div class="item"><a href="{:cmf_url('portal/About/index')}">关于华劳</a></div>
-            <div class="item"><a href="{:cmf_url('portal/News/index')}">新闻资讯</a></div>
-            <div class="item"><a href="{:cmf_url('portal/Contacts/index')}">联系我们</a></div>
-            <div class="item"><a href="{:cmf_url('portal/Application/index')}">企业应用</a></div>
-        </div>
-        <div class="foot-phone-center">
-            <div class="flex-box">
-                <div class="item"><a href="javascript:void(0);">中政外包</a></div>
-                <div class="item"><a href="https://www.chinacleaning.com" target="_blank">中洁清洁</a></div>
-                <div class="item"><a href="https://www.hualaohr.com" target="_blank">华劳人力</a></div>
-                <div class="item"><a href="https://www.laowufenbao.com" target="_blank">中劳劳务</a></div>
-            </div>
-            <div class="flex-box">
-                <div class="item"><a href="javascript:void(0);">中朗安服</a></div>
-                <div class="item"><a href="https://www.jinsanbaoxian.com" target="_blank">金伞保险</a></div>
-                <div class="item"><a href="https://www.eqibao.cn" target="_blank">雇工伞</a></div>
-                <div class="item"><a href="https://hexie12333.hualaogroup.com" target="_blank">和谐关系</a></div>
-            </div>
-            <div class="erweima">
-                <img src="__TMPL__/public/assets/style/imgs/index/hualao-erweima.png" />
-                <div>400-8718711</div>
-            </div>
-        </div>
-        <div class="foot-phone-bottom">
-            <div style="line-height: 1.86rem;">华劳集团股份有限公司 ©2022 HUALAO 版权所有</div>
-            <p>
-                <a href="http://www.miit.gov.cn/" target="_blank" style="padding-right: 10px;">鲁ICP备17039940号-1</a>
-                <a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=37149202000991" style="display:inline-block;text-decoration:none;height:20px;line-height:20px;"><img src="http://www.beian.gov.cn/file/ghs.png" style="float:left;">鲁公网安备 37149202000991号</a>
-            </p>
-        </div>
-    </div>
-</div>
+<footer>
+    <div class="footer_top">
+        <div class="container">
+            <div class="branch_office">
+                <ul class="fl col-md-8">
+                    <li>
+                        <img src="__TMPL__/public/assets/static/picture/foot1.png" alt="上海总公司">
+                        <div class="info">
+                            <h3>上海总公司</h3>
+                            <p>办公地址：上海静安区平型关路金赢108创意广场银座18楼</p>
+                            <p>
+                                咨询电话：18952265600<br>
 
-<script src="__TMPL__/public/assets/style/js/bootstrap.min.js"></script>
-<script src="__TMPL__/public/assets/style/js/bootstrap-paginator.js"></script>
-<script src="__TMPL__/public/assets/style/js/index.js"></script>
+                            </p>
+                        </div>
+                    </li>
+                    <li>
+                        <img src="__TMPL__/public/assets/static/picture/foot3.png" alt="徐州分公司">
+                        <h3>徐州分公司</h3>
+                        <p>办公地址：江苏省徐州市鼓楼区中山北路226号鼓楼广场C座19F</p>
+                        <p>
+                            咨询电话：0516-85645808<br>
+
+                        </p>
+                    </li>
+                    <li>
+                        <img src="__TMPL__/public/assets/static/picture/foot2.png" alt="南通分公司">
+                        <h3>南通分公司</h3>
+                        <p>办公地址：江苏省南通市崇川区崇川路58号</p>
+                        <p>
+                            咨询电话：18952265600<br>
+
+                        </p>
+                    </li>
+                </ul>
+                <div class="tel" class="col-md-4">
+                    <p>客服电话</p>
+                    <h3>18952265600</h3>
+                    <p>投诉及24小时值班电话</p>
+                    <h3>18952161000</h3>
+                    <ul>
+                        <li>
+                            <img src="__TMPL__/public/assets/static/picture/foot_ico1.png" class="t1"><img src="__TMPL__/public/assets/static/picture/code1.png" class="t2" alt="上海真略微信公众号二维码"></li>
+
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="footer_bottom">
+        <div class="container copright">Copyright &copy; 2019 All Rights Reserved  版权所有 ：上海真略网络科技有限公司   <a href="javascript:;" target="_blank" rel="nofollow">沪ICP备15021857号-4</a></div>
+        <div class="container copright">上海真略作为<a href="index.html">APP开发</a>领先品牌，多年来已为上百家上海企业提供高品质的移动应用解决方案及服务。欢迎来电咨询！<script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? "https://" : "http://"); document.write(unescape("%3Cspan id='cnzz_stat_icon_1256883526'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s11.cnzz.com/z_stat.php%3Fid%3D1256883526%26show%3Dpic1' type='text/javascript'%3E%3C/script%3E"));</script></div>
+    </div>
+    <div class="clear"></div>
+</footer>
+
+
+<div style="width:300px;margin:0 auto; padding:20px 0;">
+    <a target="_blank" href="javascript:;" style="display:inline-block;text-decoration:none;height:20px;line-height:20px;"><img src="__TMPL__/public/assets/static/picture/batubiao.png" style="float:left;"><p style="float:left;height:20px;line-height:20px;margin: 0px 0px 0px 5px; color:#939393;">沪公网安备 31010602004925号</p></a>
+</div>
