--- a/public/themes/simpleboot3/portal/dxwhtd.html
+++ b/public/themes/simpleboot3/portal/dxwhtd.html
@@ -8,9 +8,9 @@
   <title>大象网红探店优选系统</title>
   <meta name="keywords" content="">
   <meta name="description" content="">
-  <link href="static/css/bootstrap.css" rel="stylesheet">
-  <link href="static/css/main.css" rel="stylesheet">
-  <link href="static/css/animate.css" rel="stylesheet">
+  <link href="__TMPL__/public/assets/static/css/bootstrap.css" rel="stylesheet">
+  <link href="__TMPL__/public/assets/static/css/main.css" rel="stylesheet">
+  <link href="__TMPL__/public/assets/static/css/animate.css" rel="stylesheet">
   <!--[if lt IE 9]>
   <script src="/templates/main/js/html5shiv.min.js"></script>
   <script src="/templates/main/js/respond.min.js"></script>
@@ -20,7 +20,7 @@
 <div class="yong-top">
   <div class="container">
     <div class="head-box1 wow fadeInDown">
-      <img src="static/picture/yong_logo.png" class="yong_logo fl">
+      <img src="__TMPL__/public/assets/static/picture/yong_logo.png" class="yong_logo fl">
       <a href="" class="yong-btn white fr">商家登录</a>
       <a href="" class="yong-btn white fr">服务商登录</a>
     </div>
@@ -43,7 +43,7 @@
   </div>
   <div class="yong-advantage">
     <div class="img col-md-6 col-xs-12 text-center wow fadeInLeftBig">
-      <img src="static/picture/yong_ys1.png" alt="">
+      <img src="__TMPL__/public/assets/static/picture/yong_ys1.png" alt="">
     </div>
     <div class="txt col-md-6 col-xs-12 wow fadeInRightBig">
       <div>
@@ -54,7 +54,7 @@
   </div>
   <div class="yong-advantage">
     <div class="img col-md-6 col-xs-12 text-center wow fadeInRightBig fr">
-      <img src="static/picture/yong_ys2.png" alt="">
+      <img src="__TMPL__/public/assets/static/picture/yong_ys2.png" alt="">
     </div>
     <div class="txt col-md-6 col-xs-12 wow fadeInLeftBig">
       <div class="text-right">
@@ -65,7 +65,7 @@
   </div>
   <div class="yong-advantage">
     <div class="img col-md-6 col-xs-12 text-center wow fadeInLeftBig">
-      <img src="static/picture/yong_ys3.png" alt="">
+      <img src="__TMPL__/public/assets/static/picture/yong_ys3.png" alt="">
     </div>
     <div class="txt col-md-6 col-xs-12 wow fadeInRightBig">
       <div>
@@ -78,25 +78,25 @@
 <div class="yg_main1">
   <ul>
     <li class="col-md-6 col-xs-12 wow pulse">
-      <img src="static/picture/yong_img1.jpg">
+      <img src="__TMPL__/public/assets/static/picture/yong_img1.jpg">
       <div class="txt">
         <p>抖音本地类小程序，<br>线上高效获客、到店核销、引流至门店</p>
       </div>
     </li>
     <li class="col-md-6 col-xs-12 wow pulse">
-      <img src="static/picture/yong_img2.jpg">
+      <img src="__TMPL__/public/assets/static/picture/yong_img2.jpg">
       <div class="txt">
         <p>探店达人有更多变现机会</p>
       </div>
     </li>
     <li class="col-md-6 col-xs-12 wow pulse">
-      <img src="static/picture/yong_img3.jpg">
+      <img src="__TMPL__/public/assets/static/picture/yong_img3.jpg">
       <div class="txt">
         <p>商家获得更多曝光</p>
       </div>
     </li>
     <li class="col-md-6 col-xs-12 wow pulse">
-      <img src="static/picture/yong_img4.jpg">
+      <img src="__TMPL__/public/assets/static/picture/yong_img4.jpg">
       <div class="txt">
         <p>资源互换 多方共赢</p>
       </div>
@@ -111,31 +111,31 @@
     </div>
     <ul class="text-center">
       <li class="wow flipInX">
-        <img src="static/picture/yong_cj1.png" alt="">
+        <img src="__TMPL__/public/assets/static/picture/yong_cj1.png" alt="">
         <p>餐饮</p>
       </li>
       <li class="wow flipInX">
-        <img src="static/picture/yong_cj2.png" alt="">
+        <img src="__TMPL__/public/assets/static/picture/yong_cj2.png" alt="">
         <p>娱乐</p>
       </li>
       <li class="wow flipInX">
-        <img src="static/picture/yong_cj3.png" alt="">
+        <img src="__TMPL__/public/assets/static/picture/yong_cj3.png" alt="">
         <p>住宿</p>
       </li>
       <li class="wow flipInX">
-        <img src="static/picture/yong_cj4.png" alt="">
+        <img src="__TMPL__/public/assets/static/picture/yong_cj4.png" alt="">
         <p>房产</p>
       </li>
       <li class="wow flipInX">
-        <img src="static/picture/yong_cj5.png" alt="">
+        <img src="__TMPL__/public/assets/static/picture/yong_cj5.png" alt="">
         <p>培训</p>
       </li>
       <li class="wow flipInX">
-        <img src="static/picture/yong_cj6.png" alt="">
+        <img src="__TMPL__/public/assets/static/picture/yong_cj6.png" alt="">
         <p>生活服务</p>
       </li>
       <li class="wow flipInX">
-        <img src="static/picture/yong_cj7.png" alt="">
+        <img src="__TMPL__/public/assets/static/picture/yong_cj7.png" alt="">
         <p>汽车服务</p>
       </li>
     </ul>
@@ -148,15 +148,15 @@
   </div>
   <ul class="text-center match-condition">
     <li class="col-md-4 col-xs-12 wow flipInY">
-      <img src="static/picture/yg_tj1.png" alt="">
+      <img src="__TMPL__/public/assets/static/picture/yg_tj1.png" alt="">
       <p>拥有自己的抖音帐号</p>
     </li>
     <li class="col-md-4 col-xs-12 wow flipInY">
-      <img src="static/picture/yg_tj2.png" alt="">
+      <img src="__TMPL__/public/assets/static/picture/yg_tj2.png" alt="">
       <p>拥有营业执照</p>
     </li>
     <li class="col-md-4 col-xs-12 wow flipInY">
-      <img src="static/picture/yg_tj3.png" alt="">
+      <img src="__TMPL__/public/assets/static/picture/yg_tj3.png" alt="">
       <p>拥有商家资源</p>
     </li>
   </ul>
@@ -171,14 +171,14 @@
       <div class="infos col-md-4 col-xs-12 wow bounceInLeft">
         <ul>
           <li>
-            <img src="static/picture/yg_sq1.png" alt="">
+            <img src="__TMPL__/public/assets/static/picture/yg_sq1.png" alt="">
             <div class="txt">
               <div class="h3">新品上市</div>
               <p>xinpinshangshi</p>
             </div>
           </li>
           <li>
-            <img src="static/picture/yg_sq2.png" alt="">
+            <img src="__TMPL__/public/assets/static/picture/yg_sq2.png" alt="">
             <div class="txt">
               <div class="h3">折扣专区</div>
               <p>zhekouzhuanqu</p>
@@ -187,19 +187,19 @@
         </ul>
       </div>
       <div class="col-md-4 col-xs-12 text-center visible-md-block visible-lg-block wow bounceIn">
-        <img src="static/picture/yg_img2.png" alt="">
+        <img src="__TMPL__/public/assets/static/picture/yg_img2.png" alt="">
       </div>
       <div class="infos col-md-4 col-xs-12 wow bounceInRight">
         <ul>
           <li>
-            <img src="static/picture/yg_sq3.png" alt="">
+            <img src="__TMPL__/public/assets/static/picture/yg_sq3.png" alt="">
             <div class="txt">
               <div class="h3">领券中心</div>
               <p>lingquanzhongxin</p>
             </div>
           </li>
           <li>
-            <img src="static/picture/yg_sq4.png" alt="">
+            <img src="__TMPL__/public/assets/static/picture/yg_sq4.png" alt="">
             <div class="txt">
               <div class="h3">美食榜单</div>
               <p>meishibangdan</p>
@@ -217,20 +217,20 @@
     </div>
     <div class="web-main">
       <div class="img col-md-6 col-xs-12 text-right wow fadeInLeft">
-        <img src="static/picture/yg_img3.png" alt="">
+        <img src="__TMPL__/public/assets/static/picture/yg_img3.png" alt="">
       </div>
       <div class="wm-r col-md-5 col-xs-12 fr">
         <ul>
           <li class="wow lightSpeedIn">
-            <img src="static/picture/yg_web1.png" alt="">
+            <img src="__TMPL__/public/assets/static/picture/yg_web1.png" alt="">
             <p class="fl">订单优惠券扫码核销</p>
           </li>
           <li class="wow lightSpeedIn">
-            <img src="static/picture/yg_web2.png" alt="">
+            <img src="__TMPL__/public/assets/static/picture/yg_web2.png" alt="">
             <p class="fl">今日店铺全渠道数据实时概览</p>
           </li>
           <li class="wow lightSpeedIn">
-            <img src="static/picture/yg_web3.png" alt="">
+            <img src="__TMPL__/public/assets/static/picture/yg_web3.png" alt="">
             <p class="fl">全渠道财务统计</p>
           </li>
         </ul>
@@ -245,35 +245,35 @@
   </div>
   <ul class="text-center yg-industry">
     <li class="col-md-3 col-sm-4 col-xs-6 wow bounce">
-      <img src="static/picture/yg_hy1.png" alt="">
+      <img src="__TMPL__/public/assets/static/picture/yg_hy1.png" alt="">
       <p class="eps">水果店</p>
     </li>
     <li class="col-md-3 col-sm-4 col-xs-6 wow bounce">
-      <img src="static/picture/yg_hy2.png" alt="">
+      <img src="__TMPL__/public/assets/static/picture/yg_hy2.png" alt="">
       <p class="eps">餐饮店</p>
     </li>
     <li class="col-md-3 col-sm-4 col-xs-6 wow bounce">
-      <img src="static/picture/yg_hy3.png" alt="">
+      <img src="__TMPL__/public/assets/static/picture/yg_hy3.png" alt="">
       <p class="eps">蛋糕店</p>
     </li>
     <li class="col-md-3 col-sm-4 col-xs-6 wow bounce">
-      <img src="static/picture/yg_hy4.png" alt="">
+      <img src="__TMPL__/public/assets/static/picture/yg_hy4.png" alt="">
       <p class="eps">便利店</p>
     </li>
     <li class="col-md-3 col-sm-4 col-xs-6 wow bounce">
-      <img src="static/picture/yg_hy5.png" alt="">
+      <img src="__TMPL__/public/assets/static/picture/yg_hy5.png" alt="">
       <p class="eps">小型超市</p>
     </li>
     <li class="col-md-3 col-sm-4 col-xs-6 wow bounce">
-      <img src="static/picture/yg_hy6.png" alt="">
+      <img src="__TMPL__/public/assets/static/picture/yg_hy6.png" alt="">
       <p class="eps">母婴店</p>
     </li>
     <li class="col-md-3 col-sm-4 col-xs-6 wow bounce">
-      <img src="static/picture/yg_hy7.png" alt="">
+      <img src="__TMPL__/public/assets/static/picture/yg_hy7.png" alt="">
       <p class="eps">美发店</p>
     </li>
     <li class="col-md-3 col-sm-4 col-xs-6 wow bounce">
-      <img src="static/picture/yg_hy8.png" alt="">
+      <img src="__TMPL__/public/assets/static/picture/yg_hy8.png" alt="">
       <p class="eps">其他零售</p>
     </li>
   </ul>
@@ -281,7 +281,7 @@
 <div class="dx-foot text-center">
   <p>Copyright © 2020 All Rights Reserved 版权所有 ：上海真略网络科技有限公司 <a href="" target="_blank">苏ICP备18011610号-4</a></p>
 </div>
-<script src="static/js/wow.min.js"></script>
+<script src="__TMPL__/public/assets/static/js/wow.min.js"></script>
 <script>
   if (!(/msie [6|7|8|9]/i.test(navigator.userAgent))) {
     new WOW().init();
