--- a/public/themes/simpleboot3/portal/xcx.html
+++ b/public/themes/simpleboot3/portal/xcx.html
@@ -41,7 +41,7 @@ $(document).ready(function(){
 
 });
 </script>
-<script type="text/javascript" src="__TMPL__/public/assets/static/js/dh.js"></script>
+<!--<script type="text/javascript" src="__TMPL__/public/assets/static/js/dh.js"></script>-->
 
     <div class="xcx_banner">
         <div class="container">
