--- a/public/themes/simpleboot3/public/head.html
+++ b/public/themes/simpleboot3/public/head.html
@@ -2,13 +2,13 @@
     <div class="container">
         <p class="pull_left fiften">十五年核心团队 · 值得信赖</p>
         <div class="pull_right tpr">
-            <p class="dh"><i>APP定制开发咨询热线：</i><em>1895226560</em><i> / </i><em></em></p>
+            <p class="dh"><i>APP定制开发咨询热线：</i><em>13792208163</em><i></i><em></em></p>
         </div>
     </div>
 </div>
 <nav class="navbar navbar-default header_inner">
     <div class="container" id="nav">
-        <h1 class="logo"><a href="">app开发公司,上海app开发,app定制开发</a></h1>
+        <h1 class="logo"><a href="">app开发公司,山东app开发,app定制开发</a></h1>
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
                 <span class="sr-only">Toggle navigation</span>
@@ -19,21 +19,16 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav" id="menus">
-                <li class="active"><a href=""><span>网站首页</span></a></li>
-                <li><a href="app.html"><span>APP开发</span></a></li>
-                <li><a href="xcx.html"><span>微信小程序开发</span></a></li>
-                <li><a href="wlw.html"><span>物联网与大数据开发</span></a></li>
-                <li><a href="dxwhtd.html" rel="nofollow" target="_blank"><span>大象探店优选</span></a></li>
+                <li><a href="{:cmf_url('portal/index/index')}"><span>网站首页</span></a></li>
+                <li><a href="{:cmf_url('portal/apps/index')}"><span>APP开发</span></a></li>
+                <li><a href="{:cmf_url('portal/apps/xcx')}"><span>微信小程序开发</span></a></li>
+                <li><a href="{:cmf_url('portal/apps/wlw')}"><span>成品软件</span></a></li>
                 <li class="dropdown">
                     <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span>产品与解决方案<em class="caret"></em></span></a>
                     <ul class="dropdown-menu">
-                        <a href="waste_disposal.html" rel="nofollow" target="_blank">垃圾处理项目</a>
-                        <a href="znjsxt.html" rel="nofollow" target="_blank">智能健身系统</a>
-
-                        <a href="znwyxt.html" rel="nofollow" target="_blank">智能物业系统</a>
-                        <a href="swdcxt.html" rel="nofollow" target="_blank">政务督办系统</a>
-                        <a href="dyxcx.html" rel="nofollow" target="_blank">抖音小程序</a>
-                        <a href="javascript:;" rel="nofollow" target="_blank">火课在线教育系统</a>
+                        <a href="waste_disposal.html" rel="nofollow" target="_blank">仿鱼泡网</a>
+                        <a href="znjsxt.html" rel="nofollow" target="_blank">仿Boss直聘</a>
+                        <a href="znwyxt.html" rel="nofollow" target="_blank">云遗嘱</a>
                     </ul>
                 </li>
                 <li><a href="86.html"><span>成功案例</span></a></li>
@@ -59,3 +54,4 @@
         </div>
     </div>
 </nav>
+<script type="text/javascript" src="__TMPL__/public/assets/static/js/dh.js"></script>
